--- a/kooplex-hub/kooplex/hub/templates/app/index.html
+++ b/kooplex-hub/kooplex/hub/templates/app/index.html
@@ -3,30 +3,37 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Django</h1>
-    <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Kooplex</h1>
+    <p class="lead">Infrastructure for flexible collaboration</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Worksheets</h2>
+        <p>Run pre-compiled worksheets to hide program code and
+        focus on the problem.</p>
+        <p>Worksheets hide the complexity of notebooks from end users
+        interested in scientific output.</p>
+        <p><a class="btn btn-default" href="{% url 'worksheets' %}">Browse worksheets &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Jupyter notebooks</h2>
         <p>
-            Django gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Run existing Jupyter notebooks from existing projects to process your data
+            or author your own notebooks and share with others.
         </p>
-        <p><a class="btn btn-default" href="http://www.djangobook.com/en/2.0/index.html">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="{% url 'notebooks' %}">Browse notebooks &raquo;</a></p>
+        <p><a class="btn btn-default" href="{% url 'notebooks-new' %}">Start new notebook &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Microsoft Azure</h2>
-        <p>You can easily publish to Microsoft Azure using Python Tools for Visual Studio. Find out how you can host your application using a free trial today.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
+        <h2>Are you a programmer?</h2>
+        <p>Start new projects, implement new notebooks and
+        create worksheets, or fork from other's work and continue in a different
+        direction.</p>
+        <p>A project system centred around python and gitlab allows you to share
+        your work and collaborate on problems with the whole community.</p>
+        <p><a class="btn btn-default" href="/gitlab">Browse projects &raquo;</a></p>
+        <p><a class="btn btn-default" href="/gitlab">Start new project &raquo;</a></p>
     </div>
 </div>
 
