--- a/kooplex-hub/kooplex/hub/templates/app/layout.html
+++ b/kooplex-hub/kooplex/hub/templates/app/layout.html
@@ -24,10 +24,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'projects' %}">Projects</a></li>
+                    <li><a href="{% url 'worksheets' %}">Worksheets</a></li>
                     <li><a href="{% url 'notebooks' %}">Notebooks</a></li>
-                    <li><a href="/gitlab">Repos</a></li>
-                    <li><a href="/gitlab">Files</a></li>
+                    <li><a href="/gitlab">Projects</a></li>
+                    <li><a href="/nextcloud">Files</a></li>
                     <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
