Fixed some urls.

--- a/kooplex-hub/kooplex/hub/templates/app/layout.html
+++ b/kooplex-hub/kooplex/hub/templates/app/layout.html
@@ -26,7 +26,7 @@
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'worksheets' %}">Worksheets</a></li>
                     <li><a href="{% url 'notebooks' %}">Notebooks</a></li>
-                    <li><a href="/gitlab">Projects</a></li>
+                    <li><a href="{{ base_url }}/gitlab">Projects</a></li>
                     <li><a href="/nextcloud">Files</a></li>
                     <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'contact' %}">Contact</a></li>
