Implement several functions: listing public projects, forking, committing, merge requesting. Add 'shut down' functionality to the site. Correct links.

--- a/kooplexhub/kooplex/hub/templates/app/contact.html
+++ b/kooplexhub/kooplex/hub/templates/app/contact.html
@@ -6,7 +6,7 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Eötvös Loránd University<br />
+    Eotvos Lorand University<br />
     Budapest, Hungary<br />
 </address>
 
