gtilab and owncloud open to new page

--- a/kooplexhub/kooplex/hub/templates/app/layout.html
+++ b/kooplexhub/kooplex/hub/templates/app/layout.html
@@ -26,8 +26,8 @@
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'worksheets' %}">Worksheets</a></li>
                     <li><a href="{% url 'notebooks' %}">Notebooks</a></li>
-                    <li><a href="{{ base_url }}/gitlab">Projects</a></li>
-                    <li><a href="/owncloud">Files</a></li>
+                    <li><a href="{{ base_url }}/gitlab" target="_blank">Projects</a></li>
+                    <li><a href="/owncloud" target="_blank">Files</a></li>
                     <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
