Added repo_name to container_name

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -16,6 +16,8 @@
                     <div class="form-group">
                         <label for="notebook.name">Notebook name:</label>
                         <input type="text" class="form-control" id="notebook.name" name="notebook.name" placeholder="Enter Name">
+                        <label for="project.name">Existing or new project name:</label>
+                        <input type="text" class="form-control" id="project.name" name="project.name" placeholder="Enter Project's Name">
                     </div>
                 </fieldset>
               </div>
