--- a/kooplexhub/kooplex/hub/templates/app/loginpartial.html
+++ b/kooplexhub/kooplex/hub/templates/app/loginpartial.html
@@ -1,12 +1,23 @@
 {% if user.is_authenticated %}
+     <form id="changepassw" action="{% url 'changepassword' %}" method="post" class="navbar-right">
+    {% csrf_token %}
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="javascript:document.getElementById('changepassw').submit()">Change Password</a></li>
+
+    </ul>
+
+</form>
 <form id="logoutForm" action="logout" method="post" class="navbar-right">
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
         <li><span class="navbar-brand">Hello {{ user.username }}!</span></li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+
     </ul>
 
 </form>
+
+
 
 {% else %}
 
