Now you can change your password

--- a/kooplexhub/kooplex/hub/templates/app/password-form.html
+++ b/kooplexhub/kooplex/hub/templates/app/password-form.html
@@ -35,7 +35,7 @@
                         <input type="submit" value="Change password" class="btn btn-default" />
                     </div>
                 </div>
-                {% if form.errors %}
+                {% if errors %}
                 <p class="validation-summary-errors">Please enter a correct user name and password.</p>
                 {% endif %}
             </form>
