--- a/kooplexhub/kooplex/hub/templates/app/notebooks.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks.html
@@ -1,37 +1,50 @@
 {% extends "app/layout.html" %}
 
 {% block content %}
+<h2> Existing notebook Images</h2>
+     <select name="Images">
+    {% for image in notebook_images %}
+    <option value=" {{ image }}">{{ image }}</option>
+    {% endfor %}
+    </select>
 
 <h2>My running notebooks</h2>
 {% for item in notebooks %}
     <p>Container: <b>{{ item.name }}</b></p>
-    <p><a href="{% url 'container-shutdown' %}?notebook_id={{ item.id }}">shut down</a></p>
+   <p> <a href="{% url 'container-shutdown' %}?notebook_id={{ item.id }}&session_id={{ item.id
+    }}"><span class="button shutdown">shut
+    down</span></a></p>
 {% endfor %}
 
 {% for item in sessions %}
-    <p><b>{{ item.notebook_path|cut:entry_notebook_name }}</b></p>
-    <p>
+<div class="project running">
+    <p><b>{{ item.notebook_path }}</b></p>
+    
     {% if notebook_dir_name in item.notebook_path %}
-        <a href="{{ item.external_url }}">open</a>
+<p>        <a href="{{ item.external_url }}" target="_blank"><span class="button open">open</span></a><p>
     {% else %}
-        <a href="{{ item.external_url }}">open {{ entry_notebook_name }}</a>
+        <a href="{{ item.external_url }}" target="_blank">open </a>
         {% if item.is_forked %}
-            | <a href="{% url 'notebooks-commit' %}?notebook_path_dir={{ item.notebook_path|cut:entry_notebook_name }}&is_forked={{ item.is_forked }}&project_id={{ item.project_id }}&target_id={{ item.target_id }}">
+            | <a href="{% url 'notebooks-commit' %}?notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}&project_id={{ item.project_id }}&target_id={{ item.target_id }}">
             commit and create merge request</a>
         {% else %}
-            | <a href="{% url 'notebooks-commit' %}?notebook_path_dir={{ item.notebook_path|cut:entry_notebook_name }}&is_forked={{ item.is_forked }}">
+            | <a href="{% url 'notebooks-commit' %}?notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}">
             commit</a>
         {% endif %}
     {% endif %}
-        | <a href="{% url 'notebooks-shutdown' %}?session_id={{ item.id }}">shut down</a>
+        | <a href="{% url 'notebooks-shutdown' %}?session_id={{ item.id }}&repo={{ item. }}">shut down</a>
     </p>
+    </div>
 {% endfor %}
+
+{% comment %} Nem vilagos, hogy hova krealodnak. Majd le sz a projektekhez kulon try gomb...
 
 <h2>Start new notebook</h2>
 
-{% include 'app/notebooks-new-partial.html' %}
+{#{% include 'app/notebooks-new-partial.html' %}#}
 
 <p><button type="button" class="btn btn-default" data-toggle="modal" data-target="#notebooks-new">Start new notebook &raquo;</button></p>
+{% endcomment %}
 
 <h2>User's projects</h2>
 {% for item in projects %}
