Can select image for new project

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -17,6 +17,19 @@
                         <label for="project.name">Project name:</label>
                         <input type="text" class="form-control" id="project.name" name="project.name" placeholder="Enter Name">
                     </div>
+                    <div class="form-group">
+                        <label for="project.image">Choose an image for your project</label><br>
+                        <select id="project.images" name="project.image">
+                            {% for image in notebook_images %}
+                            <option value="{{ image }}">{{ image }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="project.public">Make it public?</label><br>
+                        <input type="radio" name="project.public" value="true" checked> Yes<br>
+                        <input type="radio" name="project.public" value="false" > No<br>
+                    </div>
                 </fieldset>
               </div>
               <div class="modal-footer">
