--- a/kooplexhub/kooplex/hub/templates/app/notebooks.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks.html
@@ -1,7 +1,11 @@
 {% extends "app/layout.html" %}
 
 {% block content %}
+<!-- <h2>Image creation</h2>
+{% include 'app/notebooks-new-partial.html' %}
 
+<p><button type="button" class="btn btn-default" data-toggle="modal" data-target="#project-new">Start new project &raquo;</button></p>
+-->
 <h2>My running containers</h2>
 {% for item in notebooks %}
     <p>Container: <b>{{ item.name }}</b></p>
