--- a/kooplexhub/kooplex/hub/static/app/content/notebook.css
+++ b/kooplexhub/kooplex/hub/static/app/content/notebook.css
@@ -62,6 +62,10 @@ span.open {
 background-color: #5bc0de;
 }
 
+span.commit {
+background-color: gold;
+}
+
 span.view {
     background-color: #c11ee6;
 }
