--- a/kooplexhub/kooplex/hub/templates/app/commit.html
+++ b/kooplexhub/kooplex/hub/templates/app/commit.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="commitForm">
-            <form action="{% url 'notebooks-commitform' %}" method="post" class="form-horizontal">
+            <form action="{% url 'notebooks-commitform' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="id_message" class="col-md-2 control-label">Message: </label>
@@ -15,11 +15,26 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    {% for item in committable_dict.d %}
+                        <input type="checkbox" value="deleted" name="{{ item }}"> {{ item }} (deleted)<br>
+                    {% endfor %}
+                    {% for item in committable_dict.m %}
+                        <input type="checkbox" value="modified" name="{{ item }}"> {{ item }} (modified)<br>
+                    {% endfor %}
+                    {% for item in committable_dict.u %}
+                        <input type="checkbox" value="untracted" name="{{ item }}"> {{ item }} (untracted/renamed/new)<br>
+                    {% endfor %}
+                </div>
+                <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
+                        <input type="hidden" name="project_owner" value="{{ project_owner }}" />
+                        <input type="hidden" name="project_name" value="{{ project_name }}" />
                         <input type="hidden" name="is_forked" value="{{ is_forked }}" />
                         <input type="hidden" name="project_id" value="{{ project_id }}" />
                         <input type="hidden" name="target_id" value="{{ target_id }}" />
                         <input type="hidden" name="notebook_path_dir" value="{{ notebook_path_dir }}" />
+                        <input type="hidden" name="modified_files" value="" />
+                        <input type="hidden" name="deleted_files" value="" />
                         <input type="submit" value="Commit and push" class="btn btn-default" />
                     </div>
                 </div>
@@ -27,5 +42,34 @@
         </section>
     </div>
 </div>
+
+    <script>
+        function collectCheckedElements() {
+            var inputs = document.getElementsByTagName("input");
+            var modified_files = "'";
+            var deleted_files = "'"
+            for (var i = 1; i < inputs.length; i++) {
+                if (inputs[i].type == "checkbox") {
+                    if (inputs[i].checked) {
+                        if(inputs[i].value == "deleted") {
+                            deleted_files += inputs[i].name + ",";
+                        } else {
+                            modified_files += inputs[i].name + ",";
+                        }
+                        inputs[i].disabled = true;
+                    }
+                }
+            }
+            if(modified_files.length > 0) {
+                modified_files = modified_files.substring(0, modified_files.length - 1);
+            }
+            if(deleted_files.length > 0) {
+                deleted_files = deleted_files.substring(0, deleted_files.length - 1);
+            }
+            modified_files += "'";
+            document.getElementsByName("modified_files")[0].value = modified_files;
+            document.getElementsByName("deleted_files")[0].value = deleted_files;
+        }
+    </script>
 
 {% endblock %}
