--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -33,7 +33,7 @@
                 </fieldset>
               </div>
               <div class="modal-footer">
-                <input type="submit"class="btn btn-default" title="OK" />
+                <button type="submit"class="btn btn-default" title="OK"> Create</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
               </div>
         </form>
