--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -26,6 +26,12 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        <label for="project.description">Description of the project</label><br>
+                        <textarea rows="6" cols="50">
+                        Description here
+                        </textarea>
+                    </div>
+                    <div class="form-group">
                         <label for="project.public">Make it public?</label><br>
                         <input type="radio" name="project.public" value="true" checked> Yes<br>
                         <input type="radio" name="project.public" value="false" > No<br>
