--- a/kooplexhub/kooplex/hub/templates/app/notebooks-repo-pull-really.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-repo-pull-really.html
@@ -11,7 +11,7 @@
                  <h4 class="modal-title">Do you really want to overwrite existing data?</h4>
               </div>
               <div class="modal-footer">
-                <input type="submit" class="btn btn-default" title="Yes, please!" />
+                <button type="submit" class="btn btn-default" title="Yes, please!" > Yes, please!</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
               </div>
         </form>
