added delete button, moved properties from description to variables, #notebook is needed?

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label for="project.description">Description of the project</label><br>
-                        <textarea rows="6" cols="50">
+                        <textarea rows="6" cols="50" id="project.description" name="project.description">
                         Description here
                         </textarea>
                     </div>
